--- a/package.json
+++ b/package.json
@@ -3,12 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev -p 8888",
+    "dev": "next dev -p 8889",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
+    "18": "^0.0.0",
     "@emotion/react": "^11.10.5",
     "@mantine/core": "^5.10.1",
     "@mantine/hooks": "^5.10.1",
@@ -22,7 +23,9 @@
     "eslint": "8.31.0",
     "eslint-config-next": "13.1.2",
     "framer-motion": "^8.4.3",
-    "next": "13.1.2",
+    "next": "^13.5.6",
+    "node-fetch": "^3.3.2",
+    "openai": "^4.14.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "sql-formatter": "^12.1.3",
